publicar PDFs para descargar planos

--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -122,14 +122,14 @@
     },
     "download": "Download",
     "units": [
-      { "floor": "Ground", "bedrooms": 2, "bathrooms": 2, "surface": "83.40", "terrace": "53.44", "price": "752,000" },
-      { "floor": "Ground", "bedrooms": 3, "bathrooms": 2, "surface": "106.30", "terrace": "229", "price": "999,000" },
-      { "floor": "First", "bedrooms": 3, "bathrooms": 2, "surface": "113.45", "terrace": "47.3", "price": "987,000" },
-      { "floor": "First", "bedrooms": 4, "bathrooms": 2, "surface": "120.00", "terrace": "35.47", "price": "909,000" },
-      { "floor": "Ground", "bedrooms": 3, "bathrooms": 2, "surface": "113.45", "terrace": "107.04", "price": "994,000" },
-      { "floor": "First", "bedrooms": 4, "bathrooms": 2, "surface": "120.00", "terrace": "52.28", "price": "896,000" },
-      { "floor": "First", "bedrooms": 3, "bathrooms": 2, "surface": "106.30", "terrace": "37.28", "price": "741,000" },
-      { "floor": "Second", "bedrooms": 4, "bathrooms": 2, "surface": "120.00", "terrace": "52.14", "price": "1,110,000" }
+      { "floor": "Ground", "bedrooms": 2, "bathrooms": 2, "surface": "83.40", "terrace": "53.44", "price": "752,000", "pdf": "/documents/CB Bajo 1 - A - 752.000EUROS.pdf" },
+      { "floor": "Ground", "bedrooms": 3, "bathrooms": 2, "surface": "106.30", "terrace": "229", "price": "999,000", "pdf": "/documents/CB Bajo 4 - A - 999.000 EUROS.pdf" },
+      { "floor": "First", "bedrooms": 3, "bathrooms": 2, "surface": "113.45", "terrace": "47.3", "price": "987,000", "pdf": "/documents/CB 1-2 , A - 987.000 EUROS.pdf" },
+      { "floor": "First", "bedrooms": 4, "bathrooms": 2, "surface": "120.00", "terrace": "35.47", "price": "909,000", "pdf": "/documents/CB 1-3 , A - 909.000 EUROS.pdf" },
+      { "floor": "Ground", "bedrooms": 3, "bathrooms": 2, "surface": "113.45", "terrace": "107.04", "price": "994,000", "pdf": "/documents/CB Bajo 1 - B - 994.000EUROS.pdf" },
+      { "floor": "First", "bedrooms": 4, "bathrooms": 2, "surface": "120.00", "terrace": "52.28", "price": "896,000", "pdf": "/documents/CB 1-3 , B -  896.000 EUROS.pdf" },
+      { "floor": "First", "bedrooms": 3, "bathrooms": 2, "surface": "106.30", "terrace": "37.28", "price": "741,000", "pdf": "/documents/CB 1-4 , B - 741.000 EUROS.pdf" },
+      { "floor": "Second", "bedrooms": 4, "bathrooms": 2, "surface": "120.00", "terrace": "52.14", "price": "1,110,000", "pdf": "/documents/CB 2-3 , B - 1.110.000 EUROS.pdf" }
     ],
     "disclaimer": "(*) VAT must be added to these prices at the rate in force at the time of accrual. The current rate is 10%.",
     "includes": "All units include a parking space and a storage room in the price.",
