--- a/src/i18n/es.json
+++ b/src/i18n/es.json
@@ -122,14 +122,14 @@
     },
     "download": "Descargar",
     "units": [
-      { "floor": "Baja", "bedrooms": 2, "bathrooms": 2, "surface": "83,40", "terrace": "53,44", "price": "752.000" },
-      { "floor": "Baja", "bedrooms": 3, "bathrooms": 2, "surface": "106,30", "terrace": "229", "price": "999.000" },
-      { "floor": "Primera", "bedrooms": 3, "bathrooms": 2, "surface": "113,45", "terrace": "47,3", "price": "987.000" },
-      { "floor": "Primera", "bedrooms": 4, "bathrooms": 2, "surface": "120,00", "terrace": "35,47", "price": "909.000" },
-      { "floor": "Baja", "bedrooms": 3, "bathrooms": 2, "surface": "113,45", "terrace": "107,04", "price": "994.000" },
-      { "floor": "Primera", "bedrooms": 4, "bathrooms": 2, "surface": "120,00", "terrace": "52,28", "price": "896.000" },
-      { "floor": "Primera", "bedrooms": 3, "bathrooms": 2, "surface": "106,30", "terrace": "37,28", "price": "741.000" },
-      { "floor": "Segunda", "bedrooms": 4, "bathrooms": 2, "surface": "120,00", "terrace": "52,14", "price": "1.110.000" }
+      { "floor": "Baja", "bedrooms": 2, "bathrooms": 2, "surface": "83,40", "terrace": "53,44", "price": "752.000", "pdf": "/documents/CB Bajo 1 - A - 752.000EUROS.pdf" },
+      { "floor": "Baja", "bedrooms": 3, "bathrooms": 2, "surface": "106,30", "terrace": "229", "price": "999.000", "pdf": "/documents/CB Bajo 4 - A - 999.000 EUROS.pdf" },
+      { "floor": "Primera", "bedrooms": 3, "bathrooms": 2, "surface": "113,45", "terrace": "47,3", "price": "987.000", "pdf": "/documents/CB 1-2 , A - 987.000 EUROS.pdf" },
+      { "floor": "Primera", "bedrooms": 4, "bathrooms": 2, "surface": "120,00", "terrace": "35,47", "price": "909.000", "pdf": "/documents/CB 1-3 , A - 909.000 EUROS.pdf" },
+      { "floor": "Baja", "bedrooms": 3, "bathrooms": 2, "surface": "113,45", "terrace": "107,04", "price": "994.000", "pdf": "/documents/CB Bajo 1 - B - 994.000EUROS.pdf" },
+      { "floor": "Primera", "bedrooms": 4, "bathrooms": 2, "surface": "120,00", "terrace": "52,28", "price": "896.000", "pdf": "/documents/CB 1-3 , B -  896.000 EUROS.pdf" },
+      { "floor": "Primera", "bedrooms": 3, "bathrooms": 2, "surface": "106,30", "terrace": "37,28", "price": "741.000", "pdf": "/documents/CB 1-4 , B - 741.000 EUROS.pdf" },
+      { "floor": "Segunda", "bedrooms": 4, "bathrooms": 2, "surface": "120,00", "terrace": "52,14", "price": "1.110.000", "pdf": "/documents/CB 2-3 , B - 1.110.000 EUROS.pdf" }
     ],
     "disclaimer": "(*) A estos precios debe añadirse el IVA. al tipo vigente en cada momento en que se produzca el devengo. El tipo actual es de 10%.",
     "includes": "Todas las unidades incluyen una plaza de garaje y un trastero en el precio.",
